FEAT(details):creating and start template in reset password

--- a/templates/home/profile.html
+++ b/templates/home/profile.html
@@ -37,6 +37,7 @@
             </div>
         </form>
         <div id="error-message" class="text-red-500 mt-4 text-center hidden"></div>
+        <p class="mt-4 text-center text-sm">اگر اطلاعات رو قبلا وارد کرده اید ==><a href="http://127.0.0.1:8000/mypro/" class="text-blue-500 hover:underline">skip</a></p>
     </div>
 
     <script>
