--- a/templates/home/login.html
+++ b/templates/home/login.html
@@ -105,6 +105,7 @@
     </form>
     <div id="error-message" class="text-red-500 mt-4 text-center hidden"></div>
     <p class="mt-4 text-center text-sm">حساب کاربری ندارید؟ <a href="http://127.0.0.1:8000/add/" class="text-blue-500 hover:underline">ثبت‌نام</a></p>
+    <p class="mt-4 text-center text-sm">رمز عبور را فراموش کرده اید؟ <a href="http://127.0.0.1:8000/passreq/" class="text-blue-500 hover:underline">ایجاد رمز عبور</a></p>
   </div>
 
   <script>
